# quant-alpha-research

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
data/processed/: almgren_chriss_schedule.csv  backtest_returns.csv  backtest_summary.csv  beta_exposure.csv  bootstrap_summary.csv  candidate_false_discovery.csv  capacity_summary.csv  concentration.csv  cost_sensitivity.csv  data_quality_summary.csv  decile_forward_returns.csv  drawdown_events.csv  factor_regression_proxy.csv  false_discovery_report.csv  gross_exposure.csv  ic_series.csv  ic_summary.csv  kelly_sizing_scenarios.csv  monthly_returns.csv  naive_reversal_backtest_summary.csv  naive_reversal_ic_summary.csv  net_exposure.csv  newey_west_ic_summary.csv  parameter_sensitivity.csv  purged_walk_forward.csv  rank_ic_by_year.csv  regime_summary.csv  robustness_candidates.csv  rolling_performance.csv  sleeve_ablation.csv  walk_forward_yearly_ic.csv  weights.csv
docs/: audit_and_upgrade_plan.md  data_dictionary.md  reproducibility_checklist.md
notebooks/: 01_data_exploration.ipynb  02_signal_research.ipynb  03_backtest_analysis.ipynb
reports/: generated_report.md  interviewer_summary.md  research_memo.md  result_manifest.json  sample_report.md  technical_appendix.md
scripts/: download_data.py  generate_report.py  run_backtest.py  run_diagnostics.py  run_research.py  run_robustness.py  run_trader_extension.py
src/quant_alpha/: __init__.py  backtest.py  cli.py  costs.py  data.py  data_quality.py  diagnostics.py  factor.py  features.py  metrics.py  neutralization.py  plotting.py  portfolio.py  risk.py  signal.py  stats.py  trader.py  utils.py  validation.py
tests/: test_backtest.py  test_costs_stats.py  test_data_quality.py  test_diagnostics.py  test_features.py  test_metrics.py  test_neutralization_factor_trader.py  test_signal.py
