[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-alpha-research"
version = "0.1.0"
description = "Cross-sectional equity alpha research repo for liquidity-adjusted reversal."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Quant Research Portfolio"}]
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "yfinance>=0.2",
  "pydantic>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jupyter>=1.0", "ruff>=0.8.0"]

[project.scripts]
download-data = "quant_alpha.cli:download_data"
build-features = "quant_alpha.cli:run_research"
run-validation = "quant_alpha.cli:run_research"
run-backtest = "quant_alpha.cli:run_backtest"
run-robustness = "quant_alpha.cli:run_robustness"
run-diagnostics = "quant_alpha.cli:run_diagnostics"
generate-report = "quant_alpha.cli:generate_report"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
